--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
-    "mongoose": "^5.5.2"
+    "mongoose": "^5.5.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "client-install": "npm install --prefix client",
